# MyTeam360Application

./: .dockerignore  .env.example  BUILD_DMG_README.md  Dockerfile  LICENSE  NOTICE  README.md  TEST_PLAN.md  app.py  docker-compose.yml  generate_docs.py  gunicorn_conf.py  package.sh  railway.toml  requirements.txt  tests.py  tests_expanded.py
core/: __init__.py  advanced.py  agent_import.py  agents.py  analytics.py  audit.py  billing.py  biz_upgrades.py  business_intel.py  business_os.py  business_tools.py  byok.py  chat_advanced.py  collaboration.py  conversations.py  crisis.py  crm.py  crm_customization.py  database.py  departments.py  doc_export.py  document_export.py  edu_culture.py  edu_i18n.py  edu_pedagogy.py  edu_suite.py  edu_theme.py  edu_upgrades.py  education.py  email_service.py  enterprise.py  enterprise_features.py  feature_gate.py  features.py  features_v2.py  foundations.py  global_context.py  governance.py  guardrails.py  i18n.py  (+47 more)
data/: .encryption_key  initial_credentials.txt
deploy/: .env.example  setup-tailscale.sh  setup-tunnel.sh
docs/: MyTeam360-Installation-Guide.docx  MyTeam360-Security-Audit.docx  MyTeam360-User-Guide.docx
myteam360-package/: README.md  app.py  build-dmg.sh  build-standalone.sh  requirements.txt  start.sh
myteam360-package/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
myteam360-package/src-tauri/capabilities/: default.json
scripts/: build.sh  generate-icons.sh
templates/: app.html  app.html.bak  app_old.html  app_tmp.html  app_v7_backup.html  app_v8_backup.html  automations.html  base_app.html  (+21 more)
(+38 files in other folders)
